# Try-Pydantic

./: .copier-answers.yaml  .copier-answers.yml  .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yaml
docs/source/: api.rst  conf.py  index.rst
src/TryPydantic/: from_xml.py  main.py
src/TryPydantic/models/: user.py
tests/: __init__.py  test_cli.py  test_from_xml.py  test_main.py  test_simple.py
tests/data/: user.xml
